--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body> 
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>curso em html</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso em HTML5 com CSS5</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis recusandae a beatae id nobis, voluptates sed accusamus nisi corrupti, ducimus tenetur cumque, quidem ex excepturi esse ut explicabo! Odit, perspiciatis.</p>
         </article>
         <article>
-            <h2>Aartigo 002</h2>
-            <p>Texto Artigo 002</p>        
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro magni quaerat, sunt delectus molestias sint iste cum voluptatum illo officia veniam dolores omnis sequi quidem repudiandae animi hic quas enim?</p>        
         </article>
       </main>
     
