--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro magni quaerat, sunt delectus molestias sint iste cum voluptatum illo officia veniam dolores omnis sequi quidem repudiandae animi hic quas enim?</p>        
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro magni quaerat, sunt delectus molestias sint iste cum voluptatum illo officia veniam dolores omnis sequi quidem repudiandae animi hic quas enim?</p>   
+            <p><a href="">Acesse o site</a></p>  
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lasItnyInug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
         </article>
       </main>
     
